<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".CreateAdvertActivity">

    <RadioGroup
        android:id="@+id/advertTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/lostRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost" />

        <RadioButton
            android:id="@+id/foundRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/found" />

    </RadioGroup>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/contactEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_information" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date" />

    <AutoCompleteTextView
        android:id="@+id/locationAutocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:completionThreshold="1"
        android:hint="@string/Location"
        android:inputType="text"
        android:maxLines="1" />

    <Button
        android:id="@+id/getCurrentLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/get_current_location" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_main_screen2" />

</LinearLayout>
