<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/createAdvertButton"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginBottom="41dp"
        android:text="@string/create_a_new_advert"
        app:layout_constraintBottom_toTopOf="@+id/showAllItemsButton"
        app:layout_constraintEnd_toEndOf="@+id/showAllItemsButton"
        app:layout_constraintStart_toStartOf="@+id/showAllItemsButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/showAllItemsButton"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="326dp"
        android:text="@string/show_all_lost_and_found_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAdvertButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/a_simple_lost_and_found_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:text="@string/made_with_kotlin"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/createAdvertButton"
        app:layout_constraintEnd_toEndOf="@+id/createAdvertButton"
        app:layout_constraintStart_toStartOf="@+id/createAdvertButton"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
